--- a/index.html
+++ b/index.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bandsite-Bio-page</title>
+    <link rel="stylesheet" href="./styles/bio.css">
 </head>
 <body>
-    <h1>Bio-Page</h1>
+    <header class="header">
+        <a class="header__link" href="./index.html">
+            <img class="header__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
+        </a>
+        <nav class="header__nav">
+            <ul class="header__list">
+                <li class="header__item"><a class="header__link" href="./index.html">Biography</a></li>
+                <li class="header__item"><a class="header__link" href="./index.html">Shows</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!-- How to set the height for each mediadevice, how to layover color -->
+        <section class="hero">
+            <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="hero-img">
+            <div class="hero__overlay"></div>
+            <h1 class="hero__header">The Bees Knees</h1>
+        </section>
+        <section class="about">
+            <p class="about__header">About the Musicians</p>
+            <img class="about__img" src="./assets/images/band.jpg" alt="band.img">
+            <p class="about__para">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”** - Lead vocalist of The Bees Knees</p>
+        </section> 
+        <article class="beesarticle">
+            <h2 class="beesarticle__title">The Bees Knees</h2>
+            <p class="beesarticle__para">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
+                From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+        </article>    
+        <section class="gallery">
+            <h2 class="gallery__header">Photo Gallery</h2>
+            <img class="gallery__img" src="./assets/images/Photo-gallery-1.jpg" alt="img1">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-2.jpg" alt="img2">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-3.jpg" alt="img3">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-4.jpg" alt="img4">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-5.jpg" alt="img5">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-6.jpg" alt="img6">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-7.jpg" alt="img7">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-8.jpg" alt="img8">
+            <img class="gallery__img" src="./assets/images/Photo-gallery-9.jpg" alt="img9">
+        </section>        
+    </main>
+    <footer class="footer">
+        <p class="footer__header">Get In Touch</p>
+        <!-- <img class="footer__icons" src="" alt=""> -->
+        <!-- <img class="footer__icons" src="" alt=""> -->
+        <!-- <img class="footer__icons" src="" alt=""> -->
+
+    </footer>
 </body>
 </html>
