--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <main>
         <!-- How to set the height for each mediadevice, how to layover color -->
         <section class="hero">
-            <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="hero-img">
             <div class="hero__overlay"></div>
+                 <!-- <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="hero-img"> -->
+            
             <h1 class="hero__header">The Bees Knees</h1>
         </section>
         <section class="about">
