Apply stlye for photo gallery

--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
         </nav>
     </header>
     <main>
-        <!-- How to set the height for each mediadevice, how to layover color -->
+        
         <section class="hero">
-            <div class="hero__overlay"></div>
-                 <!-- <img class="hero__img" src="./assets/images/hero-bio.jpg" alt="hero-img"> -->
-            
+            <div class="hero__overlay"></div>            
             <h1 class="hero__header">The Bees Knees</h1>
         </section>
         <section class="about">
             <p class="about__header">About the Musicians</p>
-            <img class="about__img" src="./assets/images/band.jpg" alt="band.img">
+            <!-- <img class="about__img" src="./assets/images/band.jpg" alt="band.img"> -->
             <p class="about__para">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”** - Lead vocalist of The Bees Knees</p>
         </section> 
         <article class="beesarticle">
@@ -38,15 +36,17 @@
         </article>    
         <section class="gallery">
             <h2 class="gallery__header">Photo Gallery</h2>
-            <img class="gallery__img" src="./assets/images/Photo-gallery-1.jpg" alt="img1">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-2.jpg" alt="img2">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-3.jpg" alt="img3">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-4.jpg" alt="img4">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-5.jpg" alt="img5">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-6.jpg" alt="img6">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-7.jpg" alt="img7">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-8.jpg" alt="img8">
-            <img class="gallery__img" src="./assets/images/Photo-gallery-9.jpg" alt="img9">
+            <div class="galler__imgcontainer">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-1.jpg" alt="img1">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-2.jpg" alt="img2">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-3.jpg" alt="img3">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-4.jpg" alt="img4">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-5.jpg" alt="img5">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-6.jpg" alt="img6">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-7.jpg" alt="img7">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-8.jpg" alt="img8">
+                <img class="gallery__img" src="./assets/images/Photo-gallery-9.jpg" alt="img9">
+            </div>
         </section>        
     </main>
     <footer class="footer">
