--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
         
         <section class="hero">
             <div class="hero__overlay"></div>            
-            <h1 class="hero__header">The Bees Knees</h1>
+            <h1 class="hero__title">The Bees Knees</h1>
         </section>
         <section class="about">
-            <p class="about__header">About the Musicians</p>
-            <!-- <img class="about__img" src="./assets/images/band.jpg" alt="band.img"> -->
-            <p class="about__para">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’”** - Lead vocalist of The Bees Knees</p>
+            <p class="about__title">About the Musicians</p>
+            <img class="about__img" src="./assets/images/band.jpg" alt="band.img">
+            <p class="about__para">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board” </p>
+            <p class="about__para">- Lead vocalist of The Bees Knees</p>
         </section> 
         <article class="beesarticle">
             <h2 class="beesarticle__title">The Bees Knees</h2>
-            <p class="beesarticle__para">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.
-                From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
+            <p class="beesarticle__para">The Bees Knees is a pop rock band originating from San Francisco, California. The band consists a dynamic lineup featuring two lead vocalists, two guitarists, a bassist, a keyboardist and a drummer. The band achieved its first commercial success as an unsigned act, drawing attention from their future manager. Having extensive experience working with both new and seasoned acts, the manager was confident the band could succeed even further with more support, pushing The Bees Knees to sign with a well known record label.</p>
+            <p class="beesarticle__para">From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. The Bees Knees are currently recording their second studio album, looking to be released in early 2024.</p>
         </article>    
         <section class="gallery">
-            <h2 class="gallery__header">Photo Gallery</h2>
+            <h2 class="gallery__title">Photo Gallery</h2>
             <div class="galler__imgcontainer">
                 <img class="gallery__img" src="./assets/images/Photo-gallery-1.jpg" alt="img1">
                 <img class="gallery__img" src="./assets/images/Photo-gallery-2.jpg" alt="img2">
@@ -50,10 +51,28 @@
         </section>        
     </main>
     <footer class="footer">
-        <p class="footer__header">Get In Touch</p>
-        <!-- <img class="footer__icons" src="" alt=""> -->
-        <!-- <img class="footer__icons" src="" alt=""> -->
-        <!-- <img class="footer__icons" src="" alt=""> -->
+        <p class="footer__title">Get in Touch</p>
+        <div class="footer__imgcontainer">
+        <img class="footer__img" width="32" height="32" src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" alt="instagram-new"/>
+        <img class="footer__img" width="32" height="32" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/facebook-f.png" alt="facebook-f"/>
+        <img class="footer__img" width="32" height="32" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/twitter--v1.png" alt="twitter--v1"/>
+        </div>
+        
+        <p class="footer__parabold">The Bees Knees Management</p>
+        <p class="footer__para--contact">503 Broadway Penthouse,</p>
+        <p class="footer__para--contact">New York, NY 10012, USA</p>
+        <p class="footer__para--email">info@thebeesknees.com</p>
+        <p class="footer__parabold">Limitless Artist Group</p>
+        <p class="footer__para--contact">Booking Agent for</p>
+        <p class="footer__para--contact">US / South America / Japan</p>
+        <p class="footer__para--email">bookings@limitlessag.com</p>
+        <p class="footer__parabold">ARCH Entertainment</p>
+        <p class="footer__para--contact">Booking Agent for</p>
+        <p class="footer__para--contact">UK / EU / AU</p>
+        <p class="footer__para--email">bookings@archentertainment.com</p>
+
+        <img class="footer__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
+        <p class="footer__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
 
     </footer>
 </body>
