Style Photo Gallery section in tablet and desktop

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="about__title">About the Musicians</p>
             <img class="about__img" src="./assets/images/band.jpg" alt="band.img">
             <p class="about__para">“We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board” </p>
-            <p class="about__para">- Lead vocalist of The Bees Knees</p>
+            <p class="about__para about__para--modified">- Lead vocalist of The Bees Knees</p>
         </section> 
         <article class="beesarticle">
             <h2 class="beesarticle__title">The Bees Knees</h2>
@@ -37,7 +37,7 @@
         </article>    
         <section class="gallery">
             <h2 class="gallery__title">Photo Gallery</h2>
-            <div class="galler__imgcontainer">
+            <div class="gallery__imgcontainer">
                 <img class="gallery__img" src="./assets/images/Photo-gallery-1.jpg" alt="img1">
                 <img class="gallery__img" src="./assets/images/Photo-gallery-2.jpg" alt="img2">
                 <img class="gallery__img" src="./assets/images/Photo-gallery-3.jpg" alt="img3">
