Style Footer for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -51,26 +51,35 @@
         </section>        
     </main>
     <footer class="footer">
+        <section class="footer__card1">
         <p class="footer__title">Get in Touch</p>
         <div class="footer__imgcontainer">
-        <img class="footer__img" width="32" height="32" src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" alt="instagram-new"/>
-        <img class="footer__img" width="32" height="32" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/facebook-f.png" alt="facebook-f"/>
-        <img class="footer__img" width="32" height="32" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/twitter--v1.png" alt="twitter--v1"/>
+        <img class="footer__img" width="35" height="35" src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" alt="instagram-new"/>
+        <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/facebook-f.png" alt="facebook-f"/>
+        <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/twitter--v1.png" alt="twitter--v1"/>
         </div>
-        
-        <p class="footer__parabold">The Bees Knees Management</p>
-        <p class="footer__para--contact">503 Broadway Penthouse,</p>
-        <p class="footer__para--contact">New York, NY 10012, USA</p>
-        <p class="footer__para--email">info@thebeesknees.com</p>
-        <p class="footer__parabold">Limitless Artist Group</p>
-        <p class="footer__para--contact">Booking Agent for</p>
-        <p class="footer__para--contact">US / South America / Japan</p>
-        <p class="footer__para--email">bookings@limitlessag.com</p>
-        <p class="footer__parabold">ARCH Entertainment</p>
-        <p class="footer__para--contact">Booking Agent for</p>
-        <p class="footer__para--contact">UK / EU / AU</p>
-        <p class="footer__para--email">bookings@archentertainment.com</p>
-
+        <img class="footer__logo1" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
+        </section>
+        <section class="footer__cardcontainer">
+            <section class="footer__card2">
+                <p class="footer__parabold">The Bees Knees Management</p>
+                <p class="footer__para--contact">503 Broadway Penthouse,</p>
+                <p class="footer__para--contact">New York, NY 10012, USA</p>
+                <p class="footer__para--email">info@thebeesknees.com</p>
+            </section>
+            <section class="footer__card2">
+                <p class="footer__parabold">Limitless Artist Group</p>
+                <p class="footer__para--contact">Booking Agent for</p>
+                <p class="footer__para--contact">US / South America / Japan</p>
+                <p class="footer__para--email">bookings@limitlessag.com</p>
+            </section>
+            <section class="footer__card2"> 
+                <p class="footer__parabold">ARCH Entertainment</p>
+                <p class="footer__para--contact">Booking Agent for</p>
+                <p class="footer__para--contact">UK / EU / AU</p>
+                <p class="footer__para--email">bookings@archentertainment.com</p>
+            </section>
+        </section>
         <img class="footer__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
         <p class="footer__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
 
