Add diving deeper styles

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <p class="footer__title">Get in Touch</p>
         <div class="footer__imgcontainer">
         <a href="https://www.instagram.com">
-             <img class="footer__img" width="35" height="35" src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" alt="instagram-new"/>
+            <img class="footer__img" width="35" height="35" src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" alt="instagram-new"/>
         </a>
         <a href="https://www.facebook.com">
-             <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/facebook-f.png" alt="facebook-f"/>
+            <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/facebook-f.png" alt="facebook-f"/>
         </a>
         <a href="https://www.twitter.com">
             <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/twitter--v1.png" alt="twitter--v1"/>
@@ -73,19 +73,19 @@
                 <p class="footer__parabold">The Bees Knees Management</p>
                 <p class="footer__para--contact">503 Broadway Penthouse,</p>
                 <p class="footer__para--contact">New York, NY 10012, USA</p>
-                <p class="footer__para--email">info@thebeesknees.com</p>
+                <p class="footer__para--email"><a class="footer__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a></p>
             </section>
             <section class="footer__card2">
                 <p class="footer__parabold">Limitless Artist Group</p>
                 <p class="footer__para--contact">Booking Agent for</p>
                 <p class="footer__para--contact">US / South America / Japan</p>
-                <p class="footer__para--email">bookings@limitlessag.com</p>
+                <p class="footer__para--email"><a class="footer__email" href="mailto:bookings@limitlessag.com">bookings@limitlessag.com</a></p>
             </section>
             <section class="footer__card2"> 
                 <p class="footer__parabold">ARCH Entertainment</p>
                 <p class="footer__para--contact">Booking Agent for</p>
                 <p class="footer__para--contact">UK / EU / AU</p>
-                <p class="footer__para--email">bookings@archentertainment.com</p>
+                <p class="footer__para--email"><a class="footer__email" href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a></p>
             </section>
         </section>
         <img class="footer__logo" src="./assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
