Add header and hero of Mobile shows page

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shows Page</title>
+    <link rel="stylesheet" href="../styles/shows.css">
 </head>
 <body>
-    
+    <header class="header">
+        <a class="header__link" href="../index.html">
+            <img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
+        </a>
+        <nav class="header__nav">
+            <ul class="header__list">
+                <li class="header__item"><a class="header__link" href="../index.html">Biography</a></li>
+                <li class="header__item"><a class="header__link" href="./shows.html">Shows</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="hero__overlay"></div>            
+            <p class="hero__copy">Beautiful Beasts Album</p>
+            <h1 class="hero__title">Stripes of Yellow x For The Stings</h1>
+        </section>
+    </main>
 </body>
 </html>
