--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
         <nav class="header__nav">
             <ul class="header__list">
                 <li class="header__item"><a class="header__link" href="./index.html">Biography</a></li>
-                <li class="header__item"><a class="header__link" href="./index.html">Shows</a></li>
+                <li class="header__item"><a class="header__link" href="./pages/shows.html">Shows</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        
         <section class="hero">
             <div class="hero__overlay"></div>            
             <h1 class="hero__title">The Bees Knees</h1>
