--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shows Page</title>
     <link rel="stylesheet" href="../styles/shows.css">
+    <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -23,7 +24,51 @@
             <div class="hero__overlay"></div>            
             <p class="hero__copy">Beautiful Beasts Album</p>
             <h1 class="hero__title">Stripes of Yellow x For The Stings</h1>
+            <iframe class="hero__iframe" width="100%" height="130" scrolling="no" frameborder="no" allow="autoplay" 
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&amp;">
+            </iframe>
+        </section>
+        <section class="shows">            
         </section>
     </main>
+    <footer class="footer">
+        <section class="footer__card1">
+        <p class="footer__title">Get in Touch</p>
+        <div class="footer__imgcontainer">
+        <a href="https://www.instagram.com">
+            <img class="footer__img" width="35" height="35" src="https://img.icons8.com/windows/32/FFFFFF/instagram-new.png" alt="instagram-new"/>
+        </a>
+        <a href="https://www.facebook.com">
+            <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/facebook-f.png" alt="facebook-f"/>
+        </a>
+        <a href="https://www.twitter.com">
+            <img class="footer__img" width="35" height="35" src="https://img.icons8.com/ios-glyphs/30/FFFFFF/twitter--v1.png" alt="twitter--v1"/>
+        </a>
+        </div>
+        <img class="footer__logo1" src="../assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
+        </section>
+        <section class="footer__cardcontainer">
+            <section class="footer__card2">
+                <p class="footer__parabold">The Bees Knees Management</p>
+                <p class="footer__para--contact">503 Broadway Penthouse,</p>
+                <p class="footer__para--contact">New York, NY 10012, USA</p>
+                <p class="footer__para--email"><a class="footer__email" href="mailto:info@thebeesknees.com">info@thebeesknees.com</a></p>
+            </section>
+            <section class="footer__card2">
+                <p class="footer__parabold">Limitless Artist Group</p>
+                <p class="footer__para--contact">Booking Agent for</p>
+                <p class="footer__para--contact">US / South America / Japan</p>
+                <p class="footer__para--email"><a class="footer__email" href="mailto:bookings@limitlessag.com">bookings@limitlessag.com</a></p>
+            </section>
+            <section class="footer__card2"> 
+                <p class="footer__parabold">ARCH Entertainment</p>
+                <p class="footer__para--contact">Booking Agent for</p>
+                <p class="footer__para--contact">UK / EU / AU</p>
+                <p class="footer__para--email"><a class="footer__email" href="mailto:bookings@archentertainment.com">bookings@archentertainment.com</a></p>
+            </section>
+        </section>
+        <img class="footer__logo" src="../assets/logos/Logo-bandsite.svg" alt="Bandsite-logo">
+        <p class="footer__copyright">Copyright The Bees Knees © 2023 All Rights Reserved</p>
+    </footer>
 </body>
 </html>
