Add JS for bio comment section and form

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bandsite-Bio-page</title>
     <link rel="stylesheet" href="./styles/bio.css">
+    <script src="./scripts/index-page.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -49,7 +50,16 @@
                 <img class="gallery__img" src="./assets/images/Photo-gallery-8.jpg" alt="img8">
                 <img class="gallery__img" src="./assets/images/Photo-gallery-9.jpg" alt="img9">
             </div>
-        </section>        
+        </section> 
+        <section>
+            <form class="form">
+                <h1 class="form__title">Join the Conversation</h1>
+
+            </form>
+            <article class="comment-section">
+                <!-- comments go here -->
+            </article>
+        </section>       
     </main>
     <footer class="footer">
         <section class="footer__card1">
