--- a/pages/shows.html
+++ b/pages/shows.html
@@ -27,6 +27,8 @@
             <iframe class="hero__iframe" width="100%" height="130" scrolling="no" frameborder="no" allow="autoplay" 
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&amp;">
             </iframe>
+            <!-- <iframe  class="hero__iframe" scrolling="no" frameborder="no" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe> -->
         </section>
         <section class="shows">            
         </section>
