Add DOM elemtents on comment display

--- a/index.html
+++ b/index.html
@@ -51,13 +51,25 @@
                 <img class="gallery__img" src="./assets/images/Photo-gallery-9.jpg" alt="img9">
             </div>
         </section> 
-        <section>
+        <section class="conversation">
+            <h1 class="conversation__title">Join the Conversation</h1>
             <form class="form">
-                <h1 class="form__title">Join the Conversation</h1>
-
+                
             </form>
-            <article class="comment-section">
-                <!-- comments go here -->
+            <article class="comment">
+                <!-- <hr class="comment__border"></hr>
+                 <div class="comment__align">
+                <div class="comment__avatar">
+                    <img class="comment__img" src="" alt="avatar image">
+                </div>
+                <div class="comment__main">
+                    <div class="comment__head">
+                    <p class="comment__name">Victor Pinto</p>
+                    <p class="comment__date">11/02/2023</p>
+                    </div>
+                    <p class="comment__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita error consequuntur nostrum quam ea natus nulla omnis quod rerum a! </p>
+                </div>
+            </div> -->
             </article>
         </section>       
     </main>
