--- a/pages/shows.html
+++ b/pages/shows.html
@@ -23,15 +23,17 @@
         <section class="hero">
             <div class="hero__overlay"></div>            
             <p class="hero__copy">Beautiful Beasts Album</p>
-            <h1 class="hero__title">Stripes of Yellow x For The Stings</h1>
-            <iframe class="hero__iframe" width="100%" height="130" scrolling="no" frameborder="no" allow="autoplay" 
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&amp;">
-            </iframe>
+            <div class="hero__desktop">
+                <h1 class="hero__title">Stripes of Yellow x For The Stings</h1>
+                <iframe class="hero__iframe" width="100%" height="130" scrolling="no" frameborder="no" allow="autoplay" 
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&amp;">
+                </iframe>
+             </div>
             <!-- <iframe  class="hero__iframe" scrolling="no" frameborder="no" allow="autoplay"
                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/535872399&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe> -->
         </section>
         <section class="shows">
-            <div class="shows__title">Shows</div>            
+            <!-- <div class="shows__title">Shows</div>             -->
         </section>
     </main>
     <footer class="footer">
