--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shows Page</title>
     <link rel="stylesheet" href="../styles/shows.css">
-    <script src="../scripts/build-shows-page.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./scripts/band-site-api.js" defer></script>
+    <script src="../scripts/build-shows-page.js" defer></script>    
 </head>
 <body>
     <header class="header">
