Add Diving Deep buttons

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                     </div>
                     <div class="form__table">
                         <label class="form__namelable" for="form__name-id">NAME</label>
-                        <input class="form__name" type="text" id="form__name-id" name="reviewerName" placeholder="Enter your name">
+                        <input class="form__name" type="text" id="form__name-id" required name="reviewerName" placeholder="Enter your name">
                         
                         <label class="form__commentLable" for="form__comment-id">COMMENT</label>
-                        <textarea class="form__comment" id="form__comment-id" name="formComment" placeholder="Add a new comment"></textarea>
+                        <textarea class="form__comment" id="form__comment-id" required name="formComment" placeholder="Add a new comment"></textarea>
                         
                         <button class="form__button" type="submit">COMMENT</button>
                     </div>
